# essentials-configuration

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  example.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
config/cli/: logs.py  main.py
config/cli/commands/: secrets.py
config/common/: __init__.py  cli.py  files.py
config/env/: __init__.py
config/errors/: __init__.py
config/ini/: __init__.py
config/json/: __init__.py
config/secrets/: __init__.py  cli.py
config/toml/: __init__.py
config/user/: __init__.py  cli.py
config/yaml/: __init__.py
configuration/: __init__.py  env.py  errors.py  ini.py  json.py  yaml.py
configuration/common/: __init__.py  files.py
configuration/env/: __init__.py
configuration/errors/: __init__.py
configuration/ini/: __init__.py
configuration/json/: __init__.py
configuration/toml/: __init__.py
configuration/yaml/: __init__.py
examples/: README.md  example-01.py  example-01.yaml  example-02.py  example-03.env  example-03.py  example-04.py  example-04.test.yaml  example-04.yaml  example-05.py  example-06.py  example-07.py  settings.json  settings.toml
tests/: ini_example_01.ini  ini_example_02.ini  json_example_01.json  test_cli.py  test_configuration.py  yaml_example_01.yaml  yaml_example_02.yaml
